# stormsewer

./: .gitignore  Cargo.toml  DISTRIBUTION.md  PROVENANCE.md  READINESS.md  README.md  README_APP.md  RELEASE_NOTES.md  WORKED_EXAMPLE.md
.github/workflows/: ci.yml  pages.yml  release.yml
app/: Cargo.toml
app/src/: catchment_draw.rs  edit.rs  files.rs  global_edit.rs  help.rs  inspector.rs  main.rs  menu.rs  panels.rs  plan.rs  prefs.rs  profile.rs  recent.rs  report_editor.rs  state.rs  tables.rs  tc_calc.rs  theme.rs  toolbar.rs  tutorial.rs  undo.rs  viewport.rs
examples/: demo.ssproj  export_demo.rs  hydraflow-sample.stm  investor-demo.dxf  investor-demo.ssproj  municipal-summary.srpt  sample.ssn  wasm-playground.html  worked_example.rs
installer/: Info.plist  StormSewer.desktop  stormsewer.iss
scripts/: build-installer.ps1  run-headless-tests.ps1
src/: access_hole.rs  catchment.rs  diagnostics.rs  drawing.rs  hydraulics.rs  idf.rs  lib.rs  network.rs  params.rs  parse.rs  report.rs  report_html.rs  units.rs
src/design/: cost.rs  criteria.rs  inlets.rs  mod.rs  review.rs  sizing.rs
src/hydrology/: idf_set.rs  mod.rs  noaa.rs  tc.rs  tr55.rs
src/io/: dxf.rs  html.rs  landxml.rs  mod.rs  pdf.rs  project.rs  report_template.rs  stm.rs
tests/: bend_loss.rs  cli_headless.rs  headless_suite.rs  hgl_validation.rs  integration_network.rs  landxml_import.rs  published_examples.rs  robustness.rs  sections.rs  stm_import.rs  units_si.rs  validation.rs  worked_example.rs
wasm/: Cargo.toml  build.sh  index.html
wasm/src/: lib.rs
