[package]
name = "stormsewer-app"
version = "0.7.0"
edition = "2021"
description = "StormSewer — standalone storm sewer design desktop application"
license = "GPL-3.0-or-later"
default-run = "StormSewer"

[[bin]]
name = "StormSewer"
path = "src/main.rs"

[dependencies]
stormsewer = { path = ".." }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"