# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "stormsewer-wasm"
version = "0.7.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "WebAssembly bindings for the StormSewer hydrology & hydraulics engine."
repository = "https://github.com/mf4633/stormsewer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The engine, without native-only features (no printpdf → wasm-compatible).
stormsewer = { path = "..", default-features = false }
wasm-bindgen = "=0.2.95"
